--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
     <h1 style="font-family: Space Grotesk,'Times New Roman', Times, serif;">Welcome to St. Joseph Memory Lane Gallery</h1>
+    hey
 </body>
 </html>
