--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saint-Joseph</title>
+    <link rel="icon" href="icon/favicon.ico" type="image/x-icon" style="border-radius: 50%;">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +12,11 @@
 </head>
 <body>
     <h1 style="font-family: Space Grotesk,'Times New Roman', Times, serif;">Welcome to St. Joseph Memory Lane Gallery</h1>
-    hey
+    <div style="height: 100px;width: 100px; background-color: #FF0000;">
+
+    </div>
+    <div style="height: 100px;width: 100px;background-color: white;">
+
+    </div>
 </body>
 </html>
